# UAP_Machine_Learning

./: .pdm-python  README.md  pyproject.toml  requirements.txt
src/: klasifikasi_citra.py
