[project]
name = "Dashboard"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = ["streamlit>=1.41.1", "joblib>=1.4.2", "cv>=1.0.0", "opencv-python>=4.10.0.84", "matplotlib>=3.10.0", "pillow>=11.0.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "streamlit run ./src/app.py"
